--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@vueuse/core": "^12.3.0",
     "@vueuse/nuxt": "^12.3.0",
     "eslint": "^9.17.0",
-    "luxon": "^3.5.0",
     "neverthrow": "^8.1.1",
     "nuxt": "^3.15.1",
     "radix-vue": "^1.9.12",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "luxon": "^3.5.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.292",
@@ -30,6 +30,7 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@okee-tech/eslint-plugin-neverthrow": "^1.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/luxon": "^3.4.2",
     "daisyui": "^4.12.23",
     "typed-emitter": "^2.1.0"
   }
